--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <title>这里是琉璃软件团队</title>
   <body>
+	  <body background="index.jpg"
+	  style=" background-repeat:no-repeat ;
+	  background-size:100% 100%;
+	  background-attachment: fixed;"
+	  >
+    <img src="https://api.xhofe.top/ip/?line1=这里是琉璃软件团队&line2=我们是一个非公司个人势软件团队！">
     <h1>正在建设中，敬请期待！</h1>
 	<a href="https://icp.gov.moe/?keyword=20228712" target="_blank">萌ICP备20228712号</a>
   </body>
